tdf#129552 sc: avoid infinite invalidation loop when the print range is empty

Commit caeb7b141280a65e60525f11a7e6514b76e12e11 (tdf#124983 In calc make
printable page borders also initially visible, 2019-07-10) added the
ability to paint page breaks right after opening a document. The
implementation calls ScPrintFunc::UpdatePages() whenever there are no
calculated page breaks.  The problem is that this is not only true when
they are not calculated, but also happens when the print range is empty.

This means that ScGridWindow::Paint() resulted in a
vcl::Window::Invalidate() for the same window, and this happened again
and again as the idle handler was invoked, resulting in flickering form
controls.

Fix the problem by only calculating page breaks when
ScPrintFunc::HasPrintRange() confirms something will be calculated. This
works because HasPrintRange() return false when ScTable::aPrintRanges is
empty, and UpdatePages() also does nothing in that case.

(cherry picked from commit e7e01efc56f7061d0a2e5142b4bae84dd403cc50)

Change-Id: I14d8a728f4672e647e9009a3dc3e0dd5fb40c023
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/86274
Tested-by: Jenkins
Tested-by: Xisco Faulí <xiscofauli@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>